# whisper-simple-telegram-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  VERSION  pyproject.toml
.github/workflows/: docker-image.yml  yt-dlp-auto-release.yml
whisper-simple-bot/: __main__.py  bot.py  openai_utils.py
whisper_simple_bot/: __main__.py  openai_utils.py  web_dashboard.py
